--- a/Day1.ipynb
+++ b/Day1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMEaX+/YCqNmBwC3POZzJaR",
+      "authorship_tag": "ABX9TyOpfeRoYvtzxRard9wctYH9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -320,11 +320,11 @@
         "pip install langchain_google_genai"
       ],
       "metadata": {
-        "id": "uxPkZV3-m2TR",
-        "outputId": "d6a33b14-f6a1-4cd0-f392-3788af5d6c9d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uxPkZV3-m2TR",
+        "outputId": "d6a33b14-f6a1-4cd0-f392-3788af5d6c9d"
       },
       "execution_count": 15,
       "outputs": [
@@ -372,6 +372,145 @@
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests<3.0.0,>=2.18.0->google-api-core!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0,>=1.34.1->google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0,>=1.34.1->google-ai-generativelanguage<0.7.0,>=0.6.18->langchain_google_genai) (2.5.0)\n",
             "Requirement already satisfied: sniffio>=1.1 in /usr/local/lib/python3.11/dist-packages (from anyio->httpx<1,>=0.23.0->langsmith>=0.3.45->langchain-core<0.4.0,>=0.3.68->langchain_google_genai) (1.3.1)\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyCqR9fMxH6ye2rnvkiNS7vFeRPPasTCkiU\""
+      ],
+      "metadata": {
+        "id": "VZcfUAdUm_Ad"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# call gemini 2.5 flash model using langchain\n",
+        "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+        "\n",
+        "llm = ChatGoogleGenerativeAI(\n",
+        "    model=\"gemini-2.0-flash\",\n",
+        "    # other params...\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "Sc5LujfEnFCg"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain.agents import initialize_agent, AgentType\n",
+        "\n",
+        "agent = initialize_agent(\n",
+        "    tools=[random_number_generation_tool,get_context_from_vectordb,tavily_search_tool],\n",
+        "    llm=llm,\n",
+        "    verbose=True,\n",
+        "    max_iterations=2,\n",
+        "    early_stopping_method=\"generate\",\n",
+        "    handle_parsing_errors=True,\n",
+        "    agent=AgentType.STRUCTURED_CHAT_ZERO_SHOT_REACT_DESCRIPTION # Using Structured Chat agent\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "qWa9Hg_KnJQg",
+        "outputId": "62b021b1-8a10-4b47-8fb0-3e92e22dcd29",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-18-4009061000.py:3: LangChainDeprecationWarning: LangChain agents will continue to be supported, but it is recommended for new use cases to be built with LangGraph. LangGraph offers a more flexible and full-featured framework for building agents, including support for tool-calling, persistence of state, and human-in-the-loop workflows. For details, refer to the `LangGraph documentation <https://langchain-ai.github.io/langgraph/>`_ as well as guides for `Migrating from AgentExecutor <https://python.langchain.com/docs/how_to/migrate_agent/>`_ and LangGraph's `Pre-built ReAct agent <https://langchain-ai.github.io/langgraph/how-tos/create-react-agent/>`_.\n",
+            "  agent = initialize_agent(\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "output = agent.invoke(\"what is AI agent\")"
+      ],
+      "metadata": {
+        "id": "vauzBmIanQEq",
+        "outputId": "186009da-f91e-4891-c834-ecb6491ad526",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "\n",
+            "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+            "\u001b[32;1m\u001b[1;3mThought:I should use the vectordb to find relevant information about AI agents.\n",
+            "Action:\n",
+            "```\n",
+            "{\n",
+            "  \"action\": \"get_context_from_vectordb\",\n",
+            "  \"action_input\": {\n",
+            "    \"user_query\": \"AI agent\"\n",
+            "  }\n",
+            "}\n",
+            "```\u001b[0m\n",
+            "Observation: \u001b[33;1m\u001b[1;3m[Document(id='3e22564d-d4a4-4c8b-8402-0b6270675590', metadata={'source': 'https://www.ibm.com/think/topics/ai-agents', 'title': 'What Are AI Agents? | IBM', 'description': 'An artificial intelligence (AI) agent refers to a system or program that is capable of autonomously performing tasks on behalf of a user or another system.', 'language': 'en'}, page_content='How AI agents work'), Document(id='e30920b5-2d14-4c0c-a7de-ba305544f1eb', metadata={'source': 'https://www.ibm.com/think/topics/ai-agents', 'title': 'What Are AI Agents? | IBM', 'description': 'An artificial intelligence (AI) agent refers to a system or program that is capable of autonomously performing tasks on behalf of a user or another system.', 'language': 'en'}, page_content='2 Yonadov Shavit, Sandhini Agarwal, Miles Brundage, Steven Adler, Cullen O’Keefe, Rosie Campbell, Teddy Lee, Pamela Mishkin, Tyna Eloundou, Alan Hickey, Katarina Slama, Lama Ahmad, Paul McMillan, Alex Beutel, Alexandre Passos and David G. Robinson, “Practices for governing agentic AI Systems,”\\xa0OpenAI, 2023,\\xa0https://arxiv.org/pdf/2401.13138v3'), Document(id='ae14e3d1-06c5-40f5-8e1a-c68b67075be7', metadata={'source': 'https://www.ibm.com/think/topics/ai-agents', 'title': 'What Are AI Agents? | IBM', 'description': 'An artificial intelligence (AI) agent refers to a system or program that is capable of autonomously performing tasks on behalf of a user or another system.', 'language': 'en'}, page_content='What Are AI Agents? | IBM\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n                                   \\n\\n\\n\\n  \\n    What are AI agents?\\n\\n\\n\\n\\n\\n\\n    \\n\\n\\n                               \\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nAI Agents\\n\\n\\n\\nWelcome\\n\\n\\n\\n\\n\\nCaret right\\n\\nIntroduction\\n\\n\\n\\n\\nOverview\\n\\n\\n\\n\\nAI agents vs AI assistants\\n\\n\\n\\n\\nAgentic AI\\n\\n\\n\\n\\nAgentic AI vs generative AI\\n\\n\\n\\n\\nTypes of AI agents\\n\\n\\n\\n\\n\\n\\n\\nCaret right\\n\\nComponents\\n\\n\\n\\n\\nOverview\\n\\n\\n\\n\\n\\nCaret right'), Document(id='a33ab034-5d67-42e1-86ae-160578818e47', metadata={'source': 'https://www.ibm.com/think/topics/ai-agents', 'title': 'What Are AI Agents? | IBM', 'description': 'An artificial intelligence (AI) agent refers to a system or program that is capable of autonomously performing tasks on behalf of a user or another system.', 'language': 'en'}, page_content='AI agents can encompass a wide range of functions beyond natural language processing including decision-making, problem-solving, interacting with external environments and\\xa0performing actions.')]\u001b[0m\n",
+            "Thought:\u001b[32;1m\u001b[1;3mBased on the information I retrieved, an AI agent is a system or program capable of autonomously performing tasks on behalf of a user or another system. They can encompass a wide range of functions beyond natural language processing, including decision-making, problem-solving, interacting with external environments, and performing actions.\n",
+            "Action:\n",
+            "```\n",
+            "{\n",
+            "  \"action\": \"Final Answer\",\n",
+            "  \"action_input\": \"An AI agent is a system or program capable of autonomously performing tasks on behalf of a user or another system. They can encompass a wide range of functions beyond natural language processing, including decision-making, problem-solving, interacting with external environments, and performing actions.\"\n",
+            "}\n",
+            "```\u001b[0m\n",
+            "\n",
+            "\u001b[1m> Finished chain.\u001b[0m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "output[\"output\"]"
+      ],
+      "metadata": {
+        "id": "uxLzSuODnUvI",
+        "outputId": "100bdd9c-f5e2-4ac7-aeb2-0d45049f96d6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 87
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'An AI agent is a system or program capable of autonomously performing tasks on behalf of a user or another system. They can encompass a wide range of functions beyond natural language processing, including decision-making, problem-solving, interacting with external environments, and performing actions.'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 21
         }
       ]
     }
