--- a/Day1.ipynb
+++ b/Day1.ipynb
@@ -149,6 +149,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "bAJmbl_zmIq-",
         "outputId": "e7141dc5-6f21-4e0c-cbe4-fcca0f953f2e"
       },
