--- a/Day1.ipynb
+++ b/Day1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNRPCxfTaKly9eypbkBpbqS",
+      "authorship_tag": "ABX9TyP0d65/vyP1Mr979HYUabSO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -395,14 +395,14 @@
         "from langchain_google_genai import ChatGoogleGenerativeAI\n",
         "\n",
         "llm = ChatGoogleGenerativeAI(\n",
-        "    model=\"gemini-2.5-flash\",\n",
+        "    model=\"gemini-2.0-flash\",\n",
         "    # other params...\n",
         ")"
       ],
       "metadata": {
         "id": "Sc5LujfEnFCg"
       },
-      "execution_count": 23,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -423,22 +423,22 @@
       "metadata": {
         "id": "qWa9Hg_KnJQg"
       },
-      "execution_count": 24,
+      "execution_count": 37,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "output = agent.invoke(\"what is AI agent\")"
+        "output = agent.invoke(\"who is current president of USA and give me some random number\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "vauzBmIanQEq",
-        "outputId": "186009da-f91e-4891-c834-ecb6491ad526"
+        "outputId": "a6e2cd4a-6a21-4ddf-e60a-612041c1940e"
       },
-      "execution_count": 20,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,23 +447,40 @@
             "\n",
             "\n",
             "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-            "\u001b[32;1m\u001b[1;3mThought:I should use the vectordb to find relevant information about AI agents.\n",
+            "\u001b[32;1m\u001b[1;3mThought:I need to find out who the current president of the USA is and generate a random number. I will use the tavily_search tool to identify the current president and the get_random_number tool to generate a random number.\n",
             "Action:\n",
             "```\n",
             "{\n",
-            "  \"action\": \"get_context_from_vectordb\",\n",
+            "  \"action\": \"tavily_search\",\n",
             "  \"action_input\": {\n",
-            "    \"user_query\": \"AI agent\"\n",
+            "    \"query\": \"who is the current president of the USA\"\n",
             "  }\n",
             "}\n",
             "```\u001b[0m\n",
-            "Observation: \u001b[33;1m\u001b[1;3m[Document(id='3e22564d-d4a4-4c8b-8402-0b6270675590', metadata={'source': 'https://www.ibm.com/think/topics/ai-agents', 'title': 'What Are AI Agents? | IBM', 'description': 'An artificial intelligence (AI) agent refers to a system or program that is capable of autonomously performing tasks on behalf of a user or another system.', 'language': 'en'}, page_content='How AI agents work'), Document(id='e30920b5-2d14-4c0c-a7de-ba305544f1eb', metadata={'source': 'https://www.ibm.com/think/topics/ai-agents', 'title': 'What Are AI Agents? | IBM', 'description': 'An artificial intelligence (AI) agent refers to a system or program that is capable of autonomously performing tasks on behalf of a user or another system.', 'language': 'en'}, page_content='2 Yonadov Shavit, Sandhini Agarwal, Miles Brundage, Steven Adler, Cullen O’Keefe, Rosie Campbell, Teddy Lee, Pamela Mishkin, Tyna Eloundou, Alan Hickey, Katarina Slama, Lama Ahmad, Paul McMillan, Alex Beutel, Alexandre Passos and David G. Robinson, “Practices for governing agentic AI Systems,”\\xa0OpenAI, 2023,\\xa0https://arxiv.org/pdf/2401.13138v3'), Document(id='ae14e3d1-06c5-40f5-8e1a-c68b67075be7', metadata={'source': 'https://www.ibm.com/think/topics/ai-agents', 'title': 'What Are AI Agents? | IBM', 'description': 'An artificial intelligence (AI) agent refers to a system or program that is capable of autonomously performing tasks on behalf of a user or another system.', 'language': 'en'}, page_content='What Are AI Agents? | IBM\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n                                   \\n\\n\\n\\n  \\n    What are AI agents?\\n\\n\\n\\n\\n\\n\\n    \\n\\n\\n                               \\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nAI Agents\\n\\n\\n\\nWelcome\\n\\n\\n\\n\\n\\nCaret right\\n\\nIntroduction\\n\\n\\n\\n\\nOverview\\n\\n\\n\\n\\nAI agents vs AI assistants\\n\\n\\n\\n\\nAgentic AI\\n\\n\\n\\n\\nAgentic AI vs generative AI\\n\\n\\n\\n\\nTypes of AI agents\\n\\n\\n\\n\\n\\n\\n\\nCaret right\\n\\nComponents\\n\\n\\n\\n\\nOverview\\n\\n\\n\\n\\n\\nCaret right'), Document(id='a33ab034-5d67-42e1-86ae-160578818e47', metadata={'source': 'https://www.ibm.com/think/topics/ai-agents', 'title': 'What Are AI Agents? | IBM', 'description': 'An artificial intelligence (AI) agent refers to a system or program that is capable of autonomously performing tasks on behalf of a user or another system.', 'language': 'en'}, page_content='AI agents can encompass a wide range of functions beyond natural language processing including decision-making, problem-solving, interacting with external environments and\\xa0performing actions.')]\u001b[0m\n",
-            "Thought:\u001b[32;1m\u001b[1;3mBased on the information I retrieved, an AI agent is a system or program capable of autonomously performing tasks on behalf of a user or another system. They can encompass a wide range of functions beyond natural language processing, including decision-making, problem-solving, interacting with external environments, and performing actions.\n",
+            "Observation: \u001b[38;5;200m\u001b[1;3m{'query': 'who is the current president of the USA', 'follow_up_questions': None, 'answer': None, 'images': [], 'results': [{'url': 'https://www.usa.gov/presidents', 'title': 'Presidents, vice presidents, and first ladies | USAGov', 'content': 'The 47th and current president of the United States is Donald John Trump. He was sworn into office on January 20, 2025.', 'score': 0.8925721, 'raw_content': None}, {'url': 'https://en.wikipedia.org/wiki/President_of_the_United_States', 'title': 'President of the United States - Wikipedia', 'content': 'Donald Trump is the 47th and current president since January 20, 2025.', 'score': 0.8674071, 'raw_content': None}, {'url': 'https://www.whitehouse.gov/', 'title': 'The White House', 'content': 'Donald J. Trump. President of the United States · JD Vance. VICE PRESIDENT OF THE UNITED STATES · Melania Trump. First Lady OF THE UNITED STATES · The Cabinet. Of', 'score': 0.735737, 'raw_content': None}, {'url': 'https://www.instagram.com/potus/?hl=en', 'title': 'President Donald J. Trump (@potus) • Instagram photos and videos', 'content': 'President Donald J. Trump 45th & 47th President of the United States. The Golden Age of America Begins Right Now.', 'score': 0.580091, 'raw_content': None}, {'url': 'https://www.whitehouse.gov/administration/donald-j-trump/', 'title': 'President Donald J. Trump - The White House', 'content': 'President Donald J. Trump is returning to the White House to build upon his previous successes and use his mandate to reject the extremist policies.', 'score': 0.564027, 'raw_content': None}], 'response_time': 1.35}\u001b[0m\n",
+            "Thought:\u001b[32;1m\u001b[1;3mThe search results indicate that Donald Trump is the current president. However, this information seems incorrect based on the date. I need to double-check this with a more recent search. I will then generate a random number.\n",
             "Action:\n",
             "```\n",
             "{\n",
-            "  \"action\": \"Final Answer\",\n",
-            "  \"action_input\": \"An AI agent is a system or program capable of autonomously performing tasks on behalf of a user or another system. They can encompass a wide range of functions beyond natural language processing, including decision-making, problem-solving, interacting with external environments, and performing actions.\"\n",
+            "  \"action\": \"tavily_search\",\n",
+            "  \"action_input\": {\n",
+            "    \"query\": \"who is the current president of the USA\",\n",
+            "    \"time_range\": \"year\"\n",
+            "  }\n",
+            "}\n",
+            "```\u001b[0m\n",
+            "Observation: \u001b[38;5;200m\u001b[1;3m{'query': 'who is the current president of the USA', 'follow_up_questions': None, 'answer': None, 'images': [], 'results': [{'url': 'https://www.usa.gov/presidents', 'title': 'Presidents, vice presidents, and first ladies | USAGov', 'content': 'The 47th and current president of the United States is Donald John Trump. He was sworn into office on January 20, 2025.', 'score': 0.8925721, 'raw_content': None}, {'url': 'https://en.wikipedia.org/wiki/Second_presidency_of_Donald_Trump', 'title': 'Second presidency of Donald Trump - Wikipedia', 'content': \"Donald Trump's second and current tenure as the president of the United States began upon his inauguration as the 47th president on January 20, 2025.\", 'score': 0.657297, 'raw_content': None}, {'url': 'https://me.usembassy.gov/donald-j-trump-americas-new-president/', 'title': \"Donald J. Trump: America's new president\", 'content': 'President Donald J. Trump is returning to the White House as the 47th president to build upon his previous successes, unleash the American economy.', 'score': 0.64826655, 'raw_content': None}, {'url': 'https://www.whitehouse.gov/administration/donald-j-trump/', 'title': 'President Donald J. Trump - The White House', 'content': 'President Donald J. Trump is returning to the White House to build upon his previous successes and use his mandate to reject the extremist policies.', 'score': 0.56431514, 'raw_content': None}, {'url': 'https://www.youtube.com/watch?v=r_LfdrFQxvg', 'title': 'Donald Trump officially becomes 47th US president - YouTube', 'content': '... president-white-house-washington-return-sky-news-live-biden-blog-13209921#8964210 #skynews #usa SUBSCRIBE to our YouTube channel for more videos: http://www', 'score': 0.3795169, 'raw_content': None}], 'response_time': 0.96}\u001b[0m\n",
+            "Thought:\u001b[32;1m\u001b[1;3mThe search results suggest that Donald Trump is the current president, having been sworn in on January 20, 2025. This information seems inconsistent with the current date. It is possible that the search results are outdated or inaccurate. I am unable to provide a definitive answer about the current president of the USA without more reliable information.\n",
+            "\n",
+            "Action:\n",
+            "```\n",
+            "{\n",
+            "  \"action\": \"get_random_number\",\n",
+            "  \"action_input\": {\n",
+            "    \"tool_input\": {\n",
+            "      \"type\": \"string\"\n",
+            "    }\n",
+            "  }\n",
             "}\n",
             "```\u001b[0m\n",
             "\n",
@@ -483,22 +500,22 @@
           "height": 87
         },
         "id": "uxLzSuODnUvI",
-        "outputId": "100bdd9c-f5e2-4ac7-aeb2-0d45049f96d6"
+        "outputId": "f7043b2e-b00f-49c1-e820-7f3498e8450f"
       },
-      "execution_count": 21,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'An AI agent is a system or program capable of autonomously performing tasks on behalf of a user or another system. They can encompass a wide range of functions beyond natural language processing, including decision-making, problem-solving, interacting with external environments, and performing actions.'"
+              "'The search results suggest that Donald Trump is the current president, having been sworn in on January 20, 2025. This information seems inconsistent with the current date. It is possible that the search results are outdated or inaccurate. I am unable to provide a definitive answer about the current president of the USA without more reliable information.\\n\\nAction:\\n```\\n{\\n  \"action\": \"get_random_number\",\\n  \"action_input\": {\\n    \"tool_input\": {\\n      \"type\": \"string\"\\n    }\\n  }\\n}\\n```'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 42
         }
       ]
     }
