--- a/Day2_Chatbot.ipynb
+++ b/Day2_Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOny1vAOuRfnrlliCkQXzj+",
+      "authorship_tag": "ABX9TyO9m2nMnyO9tRFHaSEhsOrl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -165,19 +165,37 @@
         "output = llm.invoke(messages)"
       ],
       "metadata": {
+        "id": "GUuAxS2mzRgU"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "user_input = input(\"Please enter your query or type 'exit' to end conversation\")\n",
+        "messages = []\n",
+        "while user_input != 'exit':\n",
+        "    messages.append(HumanMessage(content=user_input))\n",
+        "    output = llm.invoke(messages)\n",
+        "    messages.append(AIMessage(content=output.content))\n",
+        "    print(output.content)\n",
+        "    user_input = input(\"Please enter your query or type 'exit' to end conversation\")"
+      ],
+      "metadata": {
+        "id": "eqG6dYuV1Ffw",
+        "outputId": "2f81950b-478f-47f8-9bc4-02dbd491db5a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "GUuAxS2mzRgU",
-        "outputId": "ebc16284-44e1-47e8-e2fe-2ef9afc745bb"
+        }
       },
-      "execution_count": 14,
+      "execution_count": 21,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "content='Artificial intelligence (AI) is a broad term that refers to the simulation of human intelligence in machines that are programmed to think and act like humans. Essentially, it\\'s about making computers do things that would normally require human intelligence.\\n\\nHere\\'s a breakdown of key aspects of AI:\\n\\n*   **Mimicking Human Intelligence:** AI aims to replicate human cognitive functions such as learning, problem-solving, decision-making, perception, and understanding natural language.\\n*   **Algorithms and Models:** AI systems rely on complex algorithms and mathematical models to process data, identify patterns, and make predictions or decisions.\\n*   **Learning and Adaptation:** A core feature of AI is the ability to learn from data and improve performance over time without being explicitly programmed for every possible scenario. This is often achieved through machine learning techniques.\\n*   **Diverse Applications:** AI is applied in various fields, including healthcare, finance, transportation, entertainment, and customer service, to automate tasks, enhance decision-making, and create new products and services.\\n\\n**Different Types of AI:**\\n\\n*   **Narrow or Weak AI:** Designed and trained for a specific task. Most AI systems today fall into this category (e.g., image recognition, spam filtering).\\n*   **General or Strong AI:** Possesses human-level intelligence and can perform any intellectual task that a human being can. This type of AI is still largely theoretical.\\n*   **Super AI:** Surpasses human intelligence in all aspects, including creativity, problem-solving, and general wisdom. This is a hypothetical concept.\\n\\n**Key Concepts in AI:**\\n\\n*   **Machine Learning (ML):**  A type of AI where systems learn from data without being explicitly programmed.  Common ML techniques include:\\n    *   **Supervised Learning:**  Training a model on labeled data (input-output pairs).\\n    *   **Unsupervised Learning:**  Finding patterns in unlabeled data.\\n    *   **Reinforcement Learning:**  Training an agent to make decisions in an environment to maximize a reward.\\n*   **Deep Learning:** A subfield of machine learning that uses artificial neural networks with multiple layers (deep neural networks) to analyze data with complex patterns.\\n*   **Natural Language Processing (NLP):** Enables computers to understand, interpret, and generate human language.\\n*   **Computer Vision:** Enables computers to \"see\" and interpret images and videos.\\n*   **Robotics:**  Deals with the design, construction, operation, and application of robots, often integrating AI for autonomous behavior.\\n\\n**In simple terms:** AI is about teaching machines to think, learn, and solve problems like humans do, but using computer programs and data.' additional_kwargs={} response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.0-flash', 'safety_ratings': []} id='run--10409cc4-b157-4bb0-9c59-0c0cec7f7ede-0' usage_metadata={'input_tokens': 9, 'output_tokens': 556, 'total_tokens': 565, 'input_token_details': {'cache_read': 0}}\n"
+            "Please enter your query or type 'exit' to end conversationexit\n"
           ]
         }
       ]
