--- a/Day2_Chatbot.ipynb
+++ b/Day2_Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9m2nMnyO9tRFHaSEhsOrl",
+      "authorship_tag": "ABX9TyMoft0FHlmS+7M5QRIgv6vo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -173,6 +173,7 @@
     {
       "cell_type": "code",
       "source": [
+        "from langchain_core.messages import HumanMessage, SystemMessage, AIMessage\n",
         "user_input = input(\"Please enter your query or type 'exit' to end conversation\")\n",
         "messages = []\n",
         "while user_input != 'exit':\n",
@@ -180,22 +181,26 @@
         "    output = llm.invoke(messages)\n",
         "    messages.append(AIMessage(content=output.content))\n",
         "    print(output.content)\n",
+        "    print(\"message List is\", messages)\n",
         "    user_input = input(\"Please enter your query or type 'exit' to end conversation\")"
       ],
       "metadata": {
-        "id": "eqG6dYuV1Ffw",
-        "outputId": "2f81950b-478f-47f8-9bc4-02dbd491db5a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "eqG6dYuV1Ffw",
+        "outputId": "4b0872e8-71d1-4526-9ec5-e39746b37419"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Please enter your query or type 'exit' to end conversationexit\n"
+            "Please enter your query or type 'exit' to end conversationHi I am Indu\n",
+            "Hi Indu! It's nice to meet you. How can I help you today? Let me know what you're interested in talking about or what you need help with.\n",
+            "Please enter your query or type 'exit' to end conversationDo you know my name\n",
+            "Yes, I know your name is Indu. You told me that!\n"
           ]
         }
       ]
